# ivan-core

./: .gitignore  README.md  pyproject.toml
ivan_core/: __init__.py  audit_log.py  config.py  supabase_client.py
ivan_core/llm/: __init__.py  base.py  claude.py  gemini.py  openai_compat.py
ivan_core/rgpd/: __init__.py  lia.py  retention.py
ivan_core/scrapers/: __init__.py  http_client.py  pdf_meta.py  serper.py
ivan_core/verifiers/: __init__.py  opencorporates.py
