[tool.poetry]
name = "ivan-core"
version = "0.1.0"
description = "Internal utilities for Iván's projects (HR sourcing, licitaciones, automations)"
authors = ["Iván"]
readme = "README.md"
packages = [{include = "ivan_core"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
supabase = "^2.5.0"
anthropic = "^0.34.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
tenacity = "^8.3.0"          # retry con backoff
selectolax = "^0.3.21"       # parser HTML rápido
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.4.0"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
