[tool.poetry]
name = "ivan-core"
version = "0.3.0"
description = "Internal utilities for Iván's projects (HR sourcing, licitaciones, automations)"
authors = ["Iván"]
readme = "README.md"
packages = [{include = "ivan_core"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
supabase = "^2.10.0"  # 2.10+ ya exige realtime ^2.0 (websockets ≥13)
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
tenacity = "^8.3.0"          # retry con backoff
selectolax = "^0.3.21"       # parser HTML rápido
python-dotenv = "^1.0.1"
# Providers LLM (todos opcionales en runtime: import lazy en cada cliente)
google-genai = "^1.0.0"      # Gemini (default)
anthropic = "^0.34.0"        # Claude
openai = "^1.40.0"           # OpenAI / OpenRouter

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.4.0"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
